<?xml version="1.0"?>
<package format="2">
  <name>leelawadee_bringup</name>
  <version>1.0.0</version>
  <description>
    roslaunch scripts for start the Leelawadee
  </description>
  <license>Apache 2.0</license>
  <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
  <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
  <!-- <url type="website">http://wiki.ros.org/leelawadee</url> -->
  <url type="repository">https://github.com/SweiLz/Leelawadee</url> 
  <url type="bugtracker">https://github.com/SweiLz/Leelawadee/issues</url> 
  <buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>diagnostic_msgs</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<build_export_depend>sensor_msgs</build_export_depend>
<build_export_depend>diagnostic_msgs</build_export_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>diagnostic_msgs</exec_depend>
</package>