<?xml version="1.0"?>
<package format="2">
	<name>leelawadee_teleop</name>
	<version>1.0.0</version>
	<description>
    teleop for Leelawadee
	</description>
	<license>Apache 2.0</license>
	<author email="sweilz.w@gmail.com">Liews Wuttipat</author>
	<maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
	<!-- <url type="website">http://wiki.ros.org/leelawadee</url> -->
	<url type="repository">https://github.com/SweiLz/Leelawadee</url>
	<url type="bugtracker">https://github.com/SweiLz/Leelawadee/issues</url>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>rospy</build_depend>
	<build_export_depend>rospy</build_export_depend>
	<exec_depend>rospy</exec_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<exec_depend>geometry_msgs</exec_depend>
</package>